# interpolate_name

./: Cargo.toml  README.md
examples/: rename.rs
src/: lib.rs
tests/: interpolate_name.rs  interpolate_test.rs
