[package]
name = "interpolate_name"
version = "0.2.1"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
description = "Simple procedural macro attribute for repetitive tests"
repository = "https://github.com/lu-zero/interpolate_name"
readme = "README.md"
keywords = ["proc_macro", "testing"]
categories = ["development-tools::testing"]
license = "MIT"
edition = "2018"

[lib]
proc-macro = true
test = false

[dependencies]
syn = { version = "0.15", features = ["fold", "full"] }
quote = "0.6"
proc-macro2 = "0.4"
